[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-retry"
version = "0.1.0"
description = "Production-grade retry/backoff for the OpenAI Python SDK, with terminal handling for insufficient_quota."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Saifullah Khan", email = "saifullah4khan@gmail.com" }]
keywords = ["openai", "retry", "backoff", "rate-limit", "reliability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["openai>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/saifullah4khan/openai-retry"
Issues = "https://github.com/saifullah4khan/openai-retry/issues"

[tool.setuptools]
packages = ["openai_retry"]
